@@ -13,7 +13,7 @@
                 Click a button below to be taken to that project/file showcase.
             </p>
             <div class = "flexArticleInverse">
-                <a href = "main.html" class = "sourceCodeEmoji centerObj">
+                <a href = "JFocus.html" class = "sourceCodeEmoji centerObj">
                     JFocus Universal Viewer (Under Construction, Priority)
                     <p class = "postletter">(This button's href changes)</p>
                 </a>
@@ -28,9 +28,6 @@
                     Download End of Term Project Code 📑
                 </a>
             </div>
-            <p class="centerTxt">
-                The code will all work now, as the hrefs have been fixed as well as the javascript button recieving a slight update to be the latest JFocus file.
-            </p>
             <h2>A Little Bit About Myself</h2>
             <p>
                 Hello World! My name is Peter Go. I live in Japan and love to launch model rockets along with coding as another little hobby. I want to do a lot of things, like make a self driving bike (electrif, ofc) and also want to make a multi-first-stage model rocket. When I grow up, I also want to work at NASA or JPL. Hope you have a nice day!
